# sa-react

./: .eslintrc.js  config-overrides.js  package.json  tsconfig.json
.github/workflows/: react-build.yml
plotters_canvas/: Cargo.toml
plotters_canvas/src/: canvas.rs  gen_OffscreenCanvasRenderingContext2d.rs  lib.rs  offcanvas.rs
plotting/: Cargo.toml
plotting/src/: data.rs  lib.rs  renderer.rs  utils.rs
plotting/src/renderers/: canvas.rs  mod.rs  webgl.rs
plotting/src/structs/: mod.rs  render_job.rs  tracedata.rs
plotting/tests/: any.rs  web.rs
public/: index.html  manifest.json
src/: App.css  App.test.tsx  App.tsx  Logger.ts  index.scss  index.tsx
src/assets/: theme.css  theme.scss
src/components/: ActionsMenu.scss  ActionsMenu.tsx  ContextMenu.tsx  DatasetTree.css  DatasetTree.scss  DatasetTree.tsx  DateTimeRange.css  DateTimeRange.scss  DateTimeRange.tsx  Graph.css  Graph.scss  Graph.tsx  GraphContainer.tsx  GraphGui.tsx  Header.css  Header.tsx  HiddenGraphs.css  HiddenGraphs.scss  HiddenGraphs.tsx  SideMenu.css  SideMenu.scss  SideMenu.tsx  SourceTree.css  SourceTree.tsx  TraceList.css  TraceList.scss  TraceList.tsx  TraceSearchBar.scss  TraceSearchBar.tsx  TreeView.css  TreeView.tsx  index.tsx
src/locale/: date.ts  en.ts  en_hp.ts  index.ts
src/redux/: graphs.actions.ts  graphs.ts  helpers.ts  index.ts  jobs.ts  modals.ts  settings.ts  store.tsx
src/services/: DataApi.ts  DataJob.ts  EventEmitter.ts  Notifications.tsx  RendererHandle.ts  TraceData.ts  appevents.ts  controls.ts  data.ts  deserialization.ts  dialogs.ts  index.ts
(+36 files in other folders)
